# cranefuck

./: .gitignore  Cargo.toml  README.md  basic.c  build.ps1  build.sh  hello2.bf  hello3.bf  print_bf.py  simple.bf
bf-examples/: count.bf  hello2.bf  loops.bf
src/: main.rs  parse.rs
