[package]
name = "cranefuck"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
color-eyre = "0.6.2"
cranelift = "0.91"
cranelift-module = "0.91"
cranelift-object = "0.91"
structopt = "0.3.26"
target-lexicon = "0.12.5"
